@@ -15,6 +15,8 @@
  * KIND, either express or implied. See the License for the
  * specific language governing permissions and limitations
  * under the License.
+ *
+ * Copyright 2026 SiteNetSoft - Replaced Arrays.asList with List.of/Set.of
  */
 package org.sitenetsoft.olinguito.server.core.edm.provider;
 
@@ -26,7 +28,7 @@ import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.sitenetsoft.olinguito.commons.api.edm.EdmBindingTarget;
 import org.sitenetsoft.olinguito.commons.api.edm.EdmEntityContainer;
@@ -55,7 +57,7 @@ public class EdmEntitySetImplTest {
     final FullQualifiedName typeName = new FullQualifiedName("ns", "entityType");
     final CsdlEntityType entityTypeProvider = new CsdlEntityType()
         .setName(typeName.getName())
-        .setKey(Arrays.asList(new CsdlPropertyRef().setName("Id")));
+        .setKey(List.of(new CsdlPropertyRef().setName("Id")));
     when(provider.getEntityType(typeName)).thenReturn(entityTypeProvider);
 
     final FullQualifiedName containerName = new FullQualifiedName("ns", "container");
@@ -68,7 +70,7 @@ public class EdmEntitySetImplTest {
         .setName(entitySetName)
         .setTitle("title")
         .setType(typeName)
-        .setNavigationPropertyBindings(Arrays.asList(
+        .setNavigationPropertyBindings(List.of(
             new CsdlNavigationPropertyBinding().setPath("path")
                 .setTarget(containerName.getFullQualifiedNameAsString() + "/" + entitySetName)));
     when(provider.getEntitySet(containerName, entitySetName)).thenReturn(entitySetProvider);
