@@ -15,10 +15,12 @@
  * KIND, either express or implied. See the License for the
  * specific language governing permissions and limitations
  * under the License.
+ *
+ * Copyright 2026 SiteNetSoft - Replaced Arrays.asList with List.of/Set.of
  */
 package org.sitenetsoft.olinguito.server.tecsvc.provider;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.sitenetsoft.olinguito.commons.api.edm.EdmPrimitiveTypeKind;
 import org.sitenetsoft.olinguito.commons.api.edm.FullQualifiedName;
@@ -861,7 +863,7 @@ public class PropertyProvider {
 		  .setName("NavPropertyETKeyNavOne")
 		  .setType(EntityTypeProvider.nameETKeyNav)
 		  .setPartner("NavPropertyETMediaMany")
-		  .setReferentialConstraints(Arrays.asList(
+		  .setReferentialConstraints(List.of(
                   new CsdlReferentialConstraint()
                       .setProperty("PropertyInt16")
                       .setReferencedProperty("PropertyInt16")));
